--- a/static/css/app/layout.less
+++ b/static/css/app/layout.less
@@ -54,11 +54,14 @@ Project Details
     }
 
     // Right side-bar
-    .content-right-sidebar-col {
-      .make-sm-column(8);
-    }
     .right-sidebar-col {
       .make-sm-column(4);
+      .make-sm-column-push(8);
+      .clearfix();
+    }
+    .content-right-sidebar-col {
+      .make-sm-column(8);
+      .make-sm-column-pull(4);
     }
   }
 }
